--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
-body{
-    font-family: Arial;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    border: none;
+}
+
+body {
+    font-family: Dongle, sans-serif;
+    font-weight: 300;
 }
