--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,38 @@ body {
     font-family: Dongle, sans-serif;
     font-weight: 300;
 }
+
+/* headings and logo */
+
+#logo {
+    float: left;
+    font-size: 280%;
+}
+
+/* navigation links */
+
+#menu{
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+
+#menu, #logo {
+    line-height: 75px;
+}
+
+#menu li {
+    float: right;
+    margin-right: 30px;
+    list-style-type: none;
+    padding: 10px 25px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menu a:hover {
+    color: #f90046;
+    transition: .4s;
+}
