--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,12 @@ body {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 20px;
+    color: white;
+    letter-spacing: 4px;
+}
+span {
+    color: #f9004d;
 }
 
 /* navigation links */
@@ -38,10 +44,19 @@ body {
 
 #menu a {
     text-decoration: none;
-    color: inherit;
+    color: white;
 }
 
 #menu a:hover {
     color: #f90046;
     transition: .4s;
+}
+
+
+/* Hero image*/
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url('../css/hero-image.jpg') no-repeat center center;
 }
