--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,15 @@ body {
 /* headings and logo */
 
 #logo {
+    
     float: left;
     font-size: 280%;
-    margin-left: 20px;
-    color: white;
+    margin-left: 5px;
+    padding: 10px;
+    color: black;
     letter-spacing: 4px;
+    text-transform: uppercase;
+    
 }
 span {
     color: #f9004d;
@@ -32,7 +36,7 @@ span {
 }
 
 #menu, #logo {
-    line-height: 75px;
+    line-height: 30px;
 }
 
 #menu li {
@@ -44,7 +48,7 @@ span {
 
 #menu a {
     text-decoration: none;
-    color: white;
+    color: black;
 }
 
 #menu a:hover {
@@ -54,6 +58,12 @@ span {
 
 
 /* Hero image and cover text*/
+
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+}
 
 #hero-image {
     height: 600px;
@@ -66,16 +76,22 @@ span {
 }
 
 #cover-text {
-    position: absolute;
+    letter-spacing: 4px;
+    width: 600px;
+    height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+    background-color: rgba(104, 103, 116, 0.7);
+    bottom: 40%;
     left: 5%;
-    top: 50%;
-    width: 300px;
-    height: 300px;
+    position: absolute;
 }
 
 #cover-text h2 {
+    color: black;
     margin: 20px, 0px, 20px;
     font-size: 50px;
+    text-transform: uppercase;
 }
 
 #cover-text h3 {
