--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,10 @@ body {
 /* headings and logo */
 
 #logo {
-    
+    font-family: Oswald, sans-serif;
     float: left;
-    font-size: 280%;
-    margin-left: 5px;
+    font-size: 50px;
+    margin-left: 30px;
     padding: 10px;
     color: black;
     letter-spacing: 4px;
@@ -63,6 +63,7 @@ span {
     height: 600px;
     width: 100%;
     overflow: hidden;
+    position: relative;
 }
 
 #hero-image {
@@ -76,25 +77,46 @@ span {
 }
 
 #cover-text {
+    
+    font-family: Oswald, sans-serif;
+   
     letter-spacing: 4px;
+
     width: 600px;
-    height: 200px;
-    padding-top: 40px;
+    height: 210px;
+    margin-left: 30px;
+   
     padding-left: 10px;
-    background-color: rgba(104, 103, 116, 0.7);
+    padding-right: 10px;
+
+    background-color: rgba(104, 103, 116, .5);
+
     bottom: 40%;
-    left: 5%;
+    border-radius: 20px 40px;
+
     position: absolute;
 }
 
 #cover-text h2 {
     color: black;
-    margin: 20px, 0px, 20px;
     font-size: 50px;
-    text-transform: uppercase;
+    text-transform: capitalize;
+}
+hr {
+    border-top: 2px solid #f90046;
 }
 
 #cover-text h3 {
-    font-size: 25px;
+    font-size: 30px;
     margin-bottom: 100px;
+}
+
+/* About Us*/
+
+#about-image {
+    height: 600px;
+    width: 40%;
+    background: url(../css/about-image.jpg) no-repeat center center;
+    
+    
 }
