--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,16 +107,57 @@ hr {
 }
 
 #cover-text h3 {
-    font-size: 30px;
-    margin-bottom: 100px;
+    font-size: 20px;
+    margin-top: 10px;
 }
 
 /* About Us*/
 
 #about-image {
     height: 600px;
-    width: 40%;
+    width: 430px;
     background: url(../css/about-image.jpg) no-repeat center center;
-    
-    
+}
+
+#about {
+    width: 100%;
+    padding: 100px 0px;
+    background-color: #191919;
+}
+
+.about-content {
+    width: 600px;
+}
+
+#main {
+    width: 1130px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.about-content h2 {
+    color: white;
+    font-size: 75px;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+
+.about-content h5 {
+    color: white;
+    letter-spacing: 4px;
+    font-size: 25px;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+}
+
+.about-content p {
+    color: white;
+    letter-spacing: 2px;
+    line-height: 30px;
+    font-size: 20px;
+    margin-bottom: 40px;
+    margin-top: 10px;
 }
