--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,8 @@ span {
     margin-right: 30px;
     list-style-type: none;
     padding: 10px 25px;
+    font-weight: 500;
+    text-transform: uppercase;
 }
 
 #menu a {
@@ -106,11 +108,11 @@ span {
 }
 hr {
     border-top: 2px solid #f90046;
+    margin-bottom: 10px;
 }
 
 #cover-text h3 {
     font-size: 20px;
-    margin-top: 10px;
 }
 
 /* About Us*/
@@ -123,7 +125,7 @@ hr {
 
 #about {
     width: 100%;
-    padding: 100px 0px;
+    padding: 50px 0px;
     background-color: #191919;
 }
 
@@ -161,7 +163,23 @@ hr {
     line-height: 30px;
     font-size: 20px;
     margin-bottom: 40px;
-    margin-top: 10px;
+}
+
+button {
+    background-color: #f9004d;
+    color: white;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 13px 30px;
+    border-radius: 30px;
+    transition: .4s;
+}
+
+button:hover {
+    background-color: transparent;
+    border: 2px solid #f9004d;
+    cursor: pointer;
 }
 
 
@@ -194,7 +212,7 @@ img {
 .flip-main {
     min-height: 100vh;
     background-color: #101010;
-    padding: 100px 0;
+    padding: 30px 0;
 }
 
 .flip-main .flip-card {
@@ -263,7 +281,7 @@ footer {
     position: relative;
     width: 100%;
     height: 200px;  
-    background: #191919;
+    background-color: #101010;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -300,3 +318,61 @@ footer p {
     transform: scale(1.3);
     transition: 0.4s;
 }
+
+/* contact us */
+
+.form-section {
+    height: 600px;
+    width: 100%;
+    background: #191919;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.signup-form {
+    margin: 150px 10% 0 0;
+    color:#fff;
+    background-color: rgba(60, 60, 60, 0.6);
+    max-width:400px;
+    position:absolute;
+    left:10%;
+    padding:30px;
+}
+
+.signup-form h2 {
+    color:#fafafa;
+    margin-bottom:20px;
+}
+
+.text-input {
+    background: transparent;
+    color:#fafafa;
+    width:100%;
+    height:25px;
+    
+    border:1px solid #fafafa;
+    border-radius:2px;
+    margin: 5px 0 20px 0;
+}
+
+.join-button {
+    margin-top:20px;
+    border-radius:2px;
+    padding:15px 32px 15px 32px;
+    text-align:center;
+    font-size:100%;
+    background-color:#f16c6b;
+    color:#fafafa;
+    display:block;
+}
+.join-button:hover {
+    background-color:#fafafa;
+    color:#f16c6b;
+}
+
+.text-input:hover {
+    border-color:#f16c6b;
+}
+
