--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300&display=swap');
 
-* {
-  
+* { 
     margin: 0;
     border: none;
     box-sizing: border-box;
 }
 
-body {
-    
+body {  
     font-family: Dongle, sans-serif;
     font-weight: 300;
 }
@@ -82,8 +80,7 @@ span {
 
 #cover-text {
     
-    font-family: Oswald, sans-serif;
-   
+    font-family: Oswald, sans-serif; 
     letter-spacing: 4px;
 
     width: 600px;
@@ -321,7 +318,7 @@ footer p {
 
 /* contact us */
 
-.contact-us h2{
+#contact-us h2{
     color: white;
     font-size: 75px;
     width: 1130px;
@@ -329,10 +326,10 @@ footer p {
     text-align: center;
 }
 
-.contact-us {
+#contact-us {
     position: relative;
     width: 100%;
-    height: 600px;  
+    height: 500px;  
     background-color: #191919;
     display: flex;
     flex-direction: column;
@@ -341,13 +338,13 @@ footer p {
 
 }
 
-.contact-us form {
+#contact-us form {
     width: 380px;
     max-width: 100%;
     position: relative;
 }
 
-.contact-us form input {
+#contact-us form input {
     display: inline-block;
     width: 100%;
     padding: 14px 130px 14px 15px;
@@ -358,7 +355,7 @@ footer p {
 }
 
 
-.contact-us form input:last-child {
+#contact-us form input:last-child {
 background-color: #f9004d;
 color: white;
 text-decoration: none;
@@ -369,7 +366,7 @@ border-radius: 30px;
 transition: .4s;
 }
 
-.contact-us form input:last-child:hover {
+#contact-us form input:last-child:hover {
     background-color: transparent;
     border: 2px solid #f9004d;
     cursor: pointer;
