--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
     float: left;
     font-size: 50px;
     margin-left: 30px;
-    padding: 10px;
+    padding: 30px 0 30px;
     color: black;
     letter-spacing: 4px;
     text-transform: uppercase;
@@ -43,7 +43,7 @@ span {
     float: right;
     margin-right: 30px;
     list-style-type: none;
-    padding: 10px 25px;
+    padding: 30px 20px 30px;
     font-weight: 500;
     text-transform: uppercase;
 }
