--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,7 +329,7 @@ footer p {
 #contact-us {
     position: relative;
     width: 100%;
-    height: 500px;  
+    height: 600px;  
     background-color: #191919;
     display: flex;
     flex-direction: column;
@@ -372,4 +372,14 @@ transition: .4s;
     cursor: pointer;
     }
 
+ #contact-us form textarea {
+    display: inline-block;
+    width: 100%;
+    padding: 14px 130px 14px 15px;
+    margin: 10px 10px;
+    border: 2px solid #f9004d;
+    outline: none;
+    border-radius: 30px;
+     
 
+ }
