--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 #logo {
     font-family: Oswald, sans-serif;
     float: left;
-    font-size: 50px;
+    font-size: 3.125rem;
     margin-left: 30px;
     padding: 30px 0 30px;
     color: black;
@@ -35,7 +35,7 @@ span {
 /* navigation links */
 
 #menu{
-    font-size: 110%;
+    font-size: 0.950rem;
     letter-spacing: 4px;
 }
 
@@ -104,7 +104,7 @@ span {
 
 #cover-text h2 {
     color: black;
-    font-size: 50px;
+    font-size: 3.125rem;
     text-transform: capitalize;
 }
 hr {
@@ -113,7 +113,7 @@ hr {
 }
 
 #cover-text h3 {
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 /* About Us*/
@@ -145,7 +145,7 @@ hr {
 
 .about-content h2 {
     color: white;
-    font-size: 75px;
+    font-size: 4.688rem;
     text-transform: capitalize;
     margin-bottom: 20px;
 }
@@ -153,7 +153,7 @@ hr {
 .about-content h3 {
     color: white;
     letter-spacing: 4px;
-    font-size: 25px;
+    font-size: 1.563rem;
     margin-bottom: 20px;
     text-transform: capitalize;
 }
@@ -162,7 +162,7 @@ hr {
     color: white;
     letter-spacing: 2px;
     line-height: 30px;
-    font-size: 20px;
+    font-size: 1.25rem;
     margin-bottom: 40px;
 }
 
@@ -194,7 +194,7 @@ img {
 
 .gifts-title h2{
     color: white;
-    font-size: 75px;
+    font-size: 4.688rem;
     width: 1130px;
     margin: 30px auto;
     text-align: center;
@@ -257,14 +257,14 @@ img {
 }
 
 .flip-main .filp-card-back h2 {
-    font-size: 24px;
+    font-size: 1.5rem;
     color: white;
     margin: 0 0 10px;
 
 }
 
 .flip-main .filp-card-back h2 {
-    font-size: 16px;
+    font-size: 1.5rem;
     color: white;
     margin: 0;
     
@@ -290,7 +290,7 @@ footer {
 }
 
 footer p {
-    font-size: 17px;
+    font-size: 1.036rem;
     color: white;
     width: 500px;
     text-align: center;
@@ -312,7 +312,7 @@ footer p {
     color: white;
     text-decoration: none;
     border-radius: 50%;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 .social a:hover {
@@ -324,7 +324,7 @@ footer p {
 
 #contact-us h2{
     color: white;
-    font-size: 75px;
+    font-size: 4.688rem;
     width: 1130px;
     margin: 30px auto;
     text-align: center;
