--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ hr {
     margin-bottom: 40px;
 }
 
-button {
+#about a {
     background-color: #f9004d;
     color: white;
     text-decoration: none;
@@ -177,7 +177,7 @@ button {
     transition: .4s;
 }
 
-button:hover {
+#about a:hover {
     background-color: transparent;
     border: 2px solid #f9004d;
     cursor: pointer;
