--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&family=Titillium+Web:ital,wght@1,300&display=swap');
 
 * { 
     margin: 0;
@@ -18,7 +18,7 @@ body {
 /* headings and logo */
 
 #logo {
-    font-family: Oswald, sans-serif;
+    font-family: Quicksand, sans-serif;
     float: left;
     font-size: 3.125rem;
     margin-left: 30px;
@@ -44,11 +44,12 @@ span {
 }
 
 #menu li {
+    font-family: Quicksand, sans-serif;
     float: right;
     margin-right: 30px;
     list-style-type: none;
     padding: 30px 20px 30px;
-    font-weight: 500;
+    font-weight: bold;
     text-transform: uppercase;
 }
 
@@ -75,7 +76,7 @@ span {
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url('../css/hero-image.jpg') no-repeat center center;
+    background: url('../css/images/hero-image.jpg') no-repeat center center;
 }
 
 #cover-text, #cover-text h2 {
@@ -83,8 +84,7 @@ span {
 }
 
 #cover-text {
-    
-    font-family: Oswald, sans-serif; 
+    font-family: Quicksand, sans-serif; 
     letter-spacing: 4px;
 
     width: 600px;
@@ -113,6 +113,7 @@ hr {
 }
 
 #cover-text h3 {
+    font-family: 'Titillium Web', sans-serif;
     font-size: 1.25rem;
 }
 
@@ -121,7 +122,7 @@ hr {
 #about-image {
     height: 600px;
     width: 430px;
-    background: url(../css/about-image.jpg) no-repeat center center;
+    background: url(../css/images/about-image.jpg) no-repeat center center;
 }
 
 #about {
@@ -144,6 +145,7 @@ hr {
 }
 
 .about-content h2 {
+    font-family: Quicksand, sans-serif;
     color: white;
     font-size: 4.688rem;
     text-transform: capitalize;
@@ -151,6 +153,7 @@ hr {
 }
 
 .about-content h3 {
+    font-family: Quicksand, sans-serif;
     color: white;
     letter-spacing: 4px;
     font-size: 1.563rem;
@@ -159,6 +162,7 @@ hr {
 }
 
 .about-content p {
+    font-family: 'Titillium Web', sans-serif;
     color: white;
     letter-spacing: 2px;
     line-height: 30px;
@@ -193,6 +197,7 @@ img {
 }
 
 .gifts-title h2{
+    font-family: Quicksand, sans-serif;
     color: white;
     font-size: 4.688rem;
     width: 1130px;
@@ -323,6 +328,7 @@ footer p {
 /* contact us */
 
 #contact-us h2{
+    font-family: Quicksand, sans-serif;
     color: white;
     font-size: 4.688rem;
     width: 1130px;
