--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -394,3 +394,16 @@ transition: .4s;
     outline: none;
     border-radius: 30px;
  }
+
+ /* media queries */
+
+ /* for medium screen sizes from 950px wide and down */
+@media screen and (max-width: 950px) {
+    #menu {
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+}
