--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,12 +398,41 @@ transition: .4s;
  /* media queries */
 
  /* for medium screen sizes from 950px wide and down */
-@media screen and (max-width: 950px) {
+ @media(max-width: 950px) {
+
     #menu {
         clear: left;
         float: left;
-        margin-left: 30px;
         margin-bottom: 20px;
         line-height: 25px;
+    }
+    #menu li {
+        padding: 30px 0 30px;
+    }
+
+    #about-image {
+       display: none;
+    }
+
+    .flip-main .flip-card {
+        flex: 0 0 calc(50% - 30px);
+    }
+
+    .gifts-title h2 {
+        width: 0;
+        text-align: left;
+    }
+}
+
+@media(max-width: 767px) {
+    .flip-main .flip-card {
+        flex: 0 0 calc(100% - 30px);
+    }
+}
+
+@media(max-width: 655px) {
+    #cover-text {
+        width: 300px;
+        margin: 0px 30px
     }
 }
