--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ span {
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url('../css/images/hero-image.jpg') no-repeat center center;
+    background: url('../images/hero-image.jpg') no-repeat center center;
 }
 
 #cover-text, #cover-text h2 {
@@ -122,7 +122,7 @@ hr {
 #about-image {
     height: 600px;
     width: 430px;
-    background: url(../css/images/about-image.jpg) no-repeat center center;
+    background: url(../images/about-image.jpg) no-repeat center center;
 }
 
 #about {
@@ -260,7 +260,7 @@ img {
 
 }
 
-.flip-main .filp-card-back h2 {
+.flip-main .filp-card-back h3 {
     font-family: Quicksand, sans-serif;
     font-size: 1.5rem;
     color: white;
@@ -353,6 +353,7 @@ footer p {
     width: 380px;
     max-width: 100%;
     position: relative;
+    text-align: center;
 }
 
 #contact-us form input {
@@ -395,18 +396,32 @@ transition: .4s;
 
  /* media queries */
 
+ /* for medium screen sizes from 1072px wide and down */
+ @media(max-width: 1072px) {
+    
+    #menu li {
+        padding: 30px 0px 30px;
+
+    }
+
+ }
+
+
  /* for medium screen sizes from 950px wide and down */
  @media(max-width: 950px) {
 
     #menu {
         clear: left;
         float: left;
-        margin-bottom: 20px;
+        padding-left: 33px;
         line-height: 25px;
     }
+
     #menu li {
-        padding: 30px 0 30px;
+        padding: 30px 0px 30px;
+
     }
+    
 
     #about-image {
        display: none;
@@ -418,23 +433,43 @@ transition: .4s;
 
 }
 
+/* for medium screen sizes from 767px wide and down */
+
 @media(max-width: 767px) {
+
+    #logo {
+        font-size: 2.188rem;
+    }
+
+    #cover-text {
+        width: 300px;
+        height: 250px;
+        margin-left: 5px;
+    }
     .flip-main .flip-card {
         flex: 0 0 calc(100% - 30px);
     }
 
-    #contact-us h2 {
-        font-size: 2.688rem;
-    }
+   
 
     .gifts-title h2 {
-        font-size: 2.688rem;
+        font-size: 4.688rem;
     }
-}
 
-@media(max-width: 655px) {
-    #cover-text {
-        width: 300px;
-        margin: 0px 30px
+    #contact-us h2 {
+        font-size: 2.688rem;
+        
     }
-}
+
+    #contact-us form textarea {
+        width: 75%;
+    }
+
+    #contact-us form input {
+        width: 75%;
+    }
+
+   
+} 
+
+    
