--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -472,4 +472,11 @@ transition: .4s;
    
 } 
 
+
+@media(max-width: 440px) {
+    #menu li {
+        padding: 30px 0px 30px;
+        float: left;
+    }
+}
     
