--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,7 +299,7 @@ footer {
 footer p {
     font-size: 1.036rem;
     color: white;
-    width: 500px;
+    /* width: 500px; */
     text-align: center;
     line-height: 26px;
 }
@@ -397,11 +397,15 @@ transition: .4s;
  /* media queries */
 
  /* for medium screen sizes from 1072px wide and down */
- @media(max-width: 1072px) {
+ @media(max-width: 1125px) {
     
     #menu li {
         padding: 30px 0px 30px;
 
+    }
+
+    #about-image {
+        margin-right: 20px;
     }
 
  }
@@ -421,6 +425,8 @@ transition: .4s;
         padding: 30px 0px 30px;
 
     }
+
+    
     
 
     #about-image {
@@ -467,6 +473,10 @@ transition: .4s;
 
     #contact-us form input {
         width: 75%;
+    }
+
+    #main {
+        padding: 0 20px 0 10px
     }
 
    
