--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,6 +445,7 @@ transition: .4s;
 
     #logo {
         font-size: 2.188rem;
+        padding: 30px 0 0px;
     }
 
     #cover-text {
@@ -459,7 +460,7 @@ transition: .4s;
    
 
     .gifts-title h2 {
-        font-size: 4.688rem;
+        font-size: 3.688rem;
     }
 
     #contact-us h2 {
@@ -485,8 +486,11 @@ transition: .4s;
 
 @media(max-width: 440px) {
     #menu li {
-        padding: 30px 0px 30px;
+        clear: both;
+        padding: 5px 0px 0px;
         float: left;
+        text-align: left;
+        display: block;
     }
 }
     
