--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,39 +375,23 @@ transition: .4s;
 
  /* for medium screen sizes from 1072px wide and down */
  @media(max-width: 1125px) {
-    
-    /* #menu li {
-        padding: 30px 0px 30px;
-    } */
 
     #about-image {
         margin-right: 20px;
     }
  }
 
- /* for medium screen sizes from 950px wide and down */
- @media(max-width: 950px) {
+ /* for medium screen sizes from 949px wide and down */
+ @media(max-width: 994px) {
 
     #home {
         display: table-caption;
     }
 
     #menu li {
+        display: block;
         padding: 2px 0px
-        
     }
-  
-
-    /* #menu {
-        clear: left;
-        float: left;
-        padding-left: 33px;
-        line-height: 25px;
-    }
-
-    #menu li {
-        padding: 30px 0px 30px;
-    } */
 
     #about-image {
        display: none;
@@ -421,11 +405,6 @@ transition: .4s;
 /* for medium screen sizes from 767px wide and down */
 
 @media(max-width: 767px) {
-
-    /* #logo {
-        font-size: 2.188rem;
-        padding: 30px 0 0px;
-    } */
 
     #cover-text {
         width: 300px;
