--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,10 +406,14 @@ transition: .4s;
 
 @media(max-width: 767px) {
 
+    #logo {
+        font-size: 2.525rem;
+    }
+
     #cover-text {
         width: 300px;
         height: 250px;
-        margin-left: 5px;
+        margin-left: 10px;
     }
 
     .flip-main .flip-card {
@@ -437,14 +441,3 @@ transition: .4s;
     }
 } 
 
-/* for medium screen sizes from 533px wide and down */
-/* @media(max-width: 533px) {
-    #menu li {
-        clear: both;
-        padding: 5px 0px 0px;
-        float: left;
-        text-align: left;
-        display: block;
-    }
-} */
-    
